Fix skills alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2895,9 +2895,17 @@ button.small,
 }
 /* Skills */
 #skills {
-	padding: 3em 0 0em 0;
+	padding: 0 0 0em 0;
 }
 
+#skills .container{
+	padding: 0 0 0em 0;
+	background-color: #fafafa;
+}
+
+#skills .wrapper.style1{
+	background-color: #fafafa;
+}
 #skills a {
 	color: inherit;
 	border-bottom-color: rgba(71, 71, 71, 0.25);
@@ -2905,7 +2913,7 @@ button.small,
 #skills h2{
 	font-size: 2.5em;
 	margin: 0;
-	margin-top: -1em;
+	margin-top: 0em;
 	border-bottom: solid 1px #e0e0e0;
 }
 
@@ -2914,9 +2922,6 @@ button.small,
 	font-size: 1.75em;
 }
 
-#skills .container {
-	margin-bottom: 4em;
-}
 
 #skills .icons {
 	text-align: center;
@@ -2943,9 +2948,7 @@ button.small,
 }
 
 /* projects */
-#projects {
-	padding: 0em 0 0em 0;
-}
+
 #projects h2{
 	font-size: 2.5em;
 	margin: 0em 0 0 0;
@@ -3247,98 +3250,6 @@ button.small,
 
 	/* Nav */
 
-	#page-wrapper {
-		-moz-backface-visibility: hidden;
-		-webkit-backface-visibility: hidden;
-		-ms-backface-visibility: hidden;
-		backface-visibility: hidden;
-		-moz-transition: -moz-transform 0.5s ease;
-		-webkit-transition: -webkit-transform 0.5s ease;
-		-ms-transition: -ms-transform 0.5s ease;
-		transition: transform 0.5s ease;
-		padding-bottom: 1px;
-		padding-top: 44px;
-	}
-
-	#titleBar {
-		-moz-backface-visibility: hidden;
-		-webkit-backface-visibility: hidden;
-		-ms-backface-visibility: hidden;
-		backface-visibility: hidden;
-		-moz-transition: -moz-transform 0.5s ease;
-		-webkit-transition: -webkit-transform 0.5s ease;
-		-ms-transition: -ms-transform 0.5s ease;
-		transition: transform 0.5s ease;
-		display: block;
-		height: 44px;
-		left: 0;
-		position: fixed;
-		top: 0;
-		width: 100%;
-		z-index: 10001;
-		background-color: #333;
-		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/bg01.png");
-		background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/bg01.png");
-		background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/bg01.png");
-		background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("images/bg01.png");
-		height: 44px;
-		line-height: 44px;
-		box-shadow: 0 4px 0 0 black;
-	}
-
-	#titleBar .title {
-		display: block;
-		position: relative;
-		font-weight: 600;
-		text-align: center;
-		color: #fff;
-		z-index: 1;
-	}
-
-	#titleBar .title em {
-		font-style: normal;
-		font-weight: 300;
-	}
-
-	#titleBar .toggle {
-		text-decoration: none;
-		border: 0;
-		height: 60px;
-		left: 0;
-		position: absolute;
-		top: 0;
-		width: 80px;
-		z-index: 2;
-	}
-
-	#titleBar .toggle:before {
-		-moz-osx-font-smoothing: grayscale;
-		-webkit-font-smoothing: antialiased;
-		display: inline-block;
-		font-style: normal;
-		font-variant: normal;
-		text-rendering: auto;
-		line-height: 1;
-		text-transform: none !important;
-		font-family: 'Font Awesome 5 Free';
-		font-weight: 900;
-	}
-
-	#titleBar .toggle:before {
-		content: '\f0c9';
-		display: block;
-		height: 44px;
-		line-height: inherit;
-		text-align: center;
-		width: 44px;
-		color: #fff;
-		opacity: 0.5;
-	}
-
-	#titleBar .toggle:active:before {
-		opacity: 0.75;
-	}
-
 	#navPanel {
 		background-color: #1f1f1f;
 		box-shadow: inset -1px 0 3px 0 rgba(0, 0, 0, 0.5);
@@ -3413,13 +3324,6 @@ button.small,
 	}
 
 	body.navPanel-visible #page-wrapper {
-		-moz-transform: translateX(275px);
-		-webkit-transform: translateX(275px);
-		-ms-transform: translateX(275px);
-		transform: translateX(275px);
-	}
-
-	body.navPanel-visible #titleBar {
 		-moz-transform: translateX(275px);
 		-webkit-transform: translateX(275px);
 		-ms-transform: translateX(275px);
